erDiagram
  APP_USER ||--o{ VEHICLE : owns
  APP_USER o|--o| VEHICLE : active_vehicle
  VEHICLE_VARIANT ||--o{ VEHICLE : identifies
  VEHICLE ||--o{ SERVICE_RECORD : history
  SERVICE_RECORD ||--|{ SERVICE_ITEM : contains
  WORK_DEFINITION ||--o{ SERVICE_ITEM : performed_work
  WORK_DEFINITION ||--|{ WORK_PRICE_RANGE : price_ranges
  VEHICLE ||--o{ PROBLEM : notes
  SERVICE_RECORD o|--o{ PROBLEM : resolves

  VEHICLE_VARIANT {
    bigint id PK
    string code
    string make
    string model
    string generation
    string engine_label
    string price_class
  }
  WORK_DEFINITION {
    bigint id PK
    string code
    string name
    string category
    string catalog_category
    int interval_km
    int interval_months
  }
  WORK_PRICE_RANGE {
    bigint id PK
    bigint work_id FK
    string price_class
    decimal min_price
    decimal max_price
  }
  PROBLEM {
    bigint id PK
    bigint vehicle_id FK
    string description
    string category
    string status
    datetime created_at
    bigint resolved_by_service_id FK
  }
